# sunshine

./: .gitignore  CMakeLists.txt  README.md
include/Core/: Camera.h  Shader.h  Window.h
shaders/: fragment.glsl  vertex.glsl
src/: Camera.cpp  Shader.cpp  Window.cpp  main.cpp
